# ratfinal

./: README.md  pyproject.toml  simple_client.py  simple_server.py
server/: simple_server.py
